css file linked to index html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="/css/style.css" type="text/css">
+  <link rel="stylesheet" href="/Product-preview-card-component/css/style.css" type="text/css">
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
   <div class="wrapper">
     <div class="product-box">
-        <img src="/images/image-product-desktop.jpg" alt="Gabrielle Essence Eau De Parfum">
-
+      <img src="/images/image-product-desktop.jpg" alt="Gabrielle Essence Eau De Parfum">
       <div class="product-descriptions">
         <span class="category">P E R F U M E</span>
         <h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
